syntax = "proto3";

option csharp_namespace ="Identity.Grpc.Protos";

service PaymentProtoService {
    // get user's payment status to update user's role
    rpc UpdateUserMembership (PaymentRequest) returns (PaymentResponse);
}

// Input: 
// User's email (field number 1)
// Payment status (field number 2)
message PaymentRequest {
    string userEmail = 1;
    bool isPaymentSuccess = 2;
}

// Response:
// Payment status (field number 1)
message PaymentResponse {
    bool isUpdateRoleSuccessSuccess = 1;
    string Message = 2;
    string userId = 3;
}